# SpeakLLM

./: .env.example  .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  tmp_edit.py  tmp_inspect.py  tmp_print.py
configs/: data.yaml  data.yml  default_config.yaml  model.yaml  model.yml  safety.yml  safety_rules.yaml  train.yml  train_stage1.yaml
configs/data/: asr_zh.yaml  dev_eval.yaml  duplex_overlap.yaml  mixed_cs.yaml  sft_duplex.yaml  tts_zh.yaml
configs/infer/: server.yaml
configs/train/: phase0_connector.yaml  phase1_sft.yaml  phase2_duplex.yaml  phase3_emotion.yaml
docs/: architecture.md  data_processing.md  datasets.md  inference_system.md  research_modules.md  roadmap.md  training_schedule.md
env/: environment.yml
env/docker/: Dockerfile  entrypoint.sh
logs/: .gitkeep  README.md
proto/: duplex.proto
scripts/: build_sequence.py  build_vocab.py  check_dataset.py  check_forward.py  data_tools.py  eval_asr.py  eval_barge_in.py  eval_spoken_qa.py  eval_tools.py  eval_tts.py  export_onnx.sh  extract_features.py  infer_streaming.py  inference.py  prepare_barge_in.py  prepare_common_voice.py  prepare_data.py  prepare_librispeech.py  quantize_audio.py  synth_cosyvoice2.py  train.py  train_core.py  train_phase0.sh  train_phase1.sh  train_phase2.sh  train_phase3.sh  vocoder_train.py
scripts/data_download/: download_asr_datasets.py  download_instruction_datasets.py  (+2 more)
speech-llm/: README.md
speechllm/: __init__.py
tests/: test_barge_in.py  test_metrics.py  test_streaming.py
tokenizer/: new_tokens.txt
(+67 files in other folders)
